header background image was fixed on mobile

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -30,7 +30,11 @@
     z-index: -1;
     right: 0;
     width: 100%;
-    top: 0;
+    top: -9px;
+
+    @include onTablet {
+      top: 0;
+    }
   }
 
   &__title {
